Fix auth z-index

--- a/src/app/auth/account-info/account-info.component.scss
+++ b/src/app/auth/account-info/account-info.component.scss
@@ -12,6 +12,7 @@
 
 md-card {
   position: absolute;
+  z-index: 10;
   top: 55px;
   right: 20px;
 
